--- a/style.css
+++ b/style.css
@@ -8,38 +8,78 @@
     padding: 0;
 }
 
+.container {
+    display: grid; 
+    grid-template-columns: 400px 1050px 620px; 
+    grid-template-rows: 1fr; 
+    height: 100vh; 
+    
+}
+
+
 /* FIM ESTILOS GERAIS */
 
+/* ORGANIZAÇÃO COLUNAS */
+.div1{
+    background-color: #f1f1f1;
+  }
+
+  .div2{
+    background-color: #F1F1F1;
+    padding-top: 50px;
+  }
+
+  .div3{
+    background-color: #f1f1f1;
+  }
+
+/* FIM ORGANIZAÇÃO */
 
 /* MENU LATERAL - DESKTOP */
-.menu-lateral {
-    list-style: none;
-    width: 25%;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
-}
 
+
+.menu-lateral {
+    list-style-type: none;
+    text-decoration: none;
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #f1f1f1;
+    overflow-x: hidden;
+    padding-top: 30px;
+    padding-left: 150px;
+}
+  
 .menu-lateral .logo{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     color: #000;
     font-size: 20px;
-    padding: 90px;
-    padding-left: 180px;
+    padding: 25px;
     font-weight: 500;
+    padding-bottom: 70px;
+    text-decoration: solid;
 }
 
-.menu-lateral ul li{
-    line-height: 50px;
+
+.menu-lateral ul {
+    list-style-type: none; 
 }
 
+    
 .menu-lateral ul li a{
-    color: #8a8888;
-    text-decoration: none;
-    font-size: 24px;
-    padding-left: 250px;
+    font-size: 20px;
+    color: #4b4a4a;
     display: block;
+    border: none;
+    background: none;
+    width:100%;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
+    padding: 10px 15px;
 }
 
 .menu-lateral ul li a:hover{
@@ -48,38 +88,73 @@
     font-weight: 650;
 }
 
-.menu-lateral ul ul li a {
-    font-size: 19px;
-    padding-left: 290px;
-}
-
-.menu-lateral ul ul {
-    display: none;
-}
-
-.menu-lateral ul .subtitulojeans.mostra{
+.menu-lateral a, .dropdown-btn {
+    text-decoration: none;
+    font-size: 20px;
+    color: #4b4a4a;
     display: block;
-}
+    border: none;
+    background: none;
+    width:100%;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
+    padding: 10px 15px;
+  }
+
+  .dropdown-container {
+    background-color: #f1f1f1;
+    padding-left: 8px;
+  }
+
+  .menu-lateral a:hover, .dropdown-btn:hover {
+    background-color: #8f8e8e6b;
+    color: #000;
+    font-weight: 650;   
+  }
 
 
-.espacamento{
+  .espacamento{
     margin-top: 120px;
 }
 
-.footer-menu a{
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
-    font-size: 24px;
-    color: #000;
-    line-height: 50px;
-    padding-left: 250px;
+ .footer-menu a{
+    font-size: 15px;
+    font-weight: 300;
 }
 
-.footer-menu a:hover{
-    background-color: #8f8e8e;
-    
-}
-
+ */
 
 /* FIM MENU LATERAL - DESKTOP */
+  
+.jeans {
+    background-color: #333;
+    overflow: hidden;
+    padding: 20px 10px;
+    height: 100%;
+    height: 100%;
+    width: 15px;
+    float: right;
+  }
+  
+  .jeans .logo {
+    float: none;
+    font-size: 24px;
+    color: #000;
+    text-decoration: none;
+    font-weight: lighter;
+  }
+  
+  .header-right {
+    float: right;
+  }
+  
+  .header-right a {
+    color: #000;
+    text-decoration: none;
+    margin-left: 20px;
+  }
+  
+
+
+
