--- a/style.css
+++ b/style.css
@@ -3,35 +3,35 @@
 /* ESTILOS GERAIS */
 
 * {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-    display: grid; 
-    grid-template-columns: 400px 1050px 620px; 
-    grid-template-rows: 1fr; 
-    height: 100vh; 
-    
+  display: grid;
+  grid-template-columns: 550px 1090px 620px;
+  grid-template-rows: 1fr;
+  height: 100vh;
+
 }
 
 
 /* FIM ESTILOS GERAIS */
 
 /* ORGANIZAÇÃO COLUNAS */
-.div1{
-    background-color: #f1f1f1;
-  }
+.div1 {
+  background-color: #f1f1f1;
+}
 
-  .div2{
-    background-color: #F1F1F1;
-    padding-top: 50px;
-  }
+.div2 {
+  background-color: #ffffff;
+  padding-top: 50px;
+}
 
-  .div3{
-    background-color: #f1f1f1;
-  }
+.div3 {
+  background-color: #f1f1f1;
+}
 
 /* FIM ORGANIZAÇÃO */
 
@@ -39,122 +39,291 @@
 
 
 .menu-lateral {
-    list-style-type: none;
-    text-decoration: none;
-    height: 100%;
-    width: 250px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #f1f1f1;
-    overflow-x: hidden;
-    padding-top: 30px;
-    padding-left: 150px;
+
+  list-style-type: none;
+  text-decoration: none;
+  height: 100%;
+  width: 300px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #ffffff;
+  overflow-x: hidden;
+  padding-top: 30px;
+  padding-left: 250px;
 }
+
+.menu-lateral .logo {
   
-.menu-lateral .logo{
-    display: flex;
-    justify-content: left;
-    color: #000;
-    font-size: 20px;
-    padding: 25px;
-    font-weight: 500;
-    padding-bottom: 70px;
-    text-decoration: solid;
+  display: flex;
+  justify-content: left;
+  color: #000;
+  font-size: 20px;
+  padding: 25px;
+  font-weight: 500;
+  padding-bottom: 70px;
+  padding-left: 65px;
 }
 
 
 .menu-lateral ul {
-    list-style-type: none; 
+  padding-left: 50px;
+  list-style-type: none;
 }
 
-    
-.menu-lateral ul li a{
-    font-size: 20px;
-    color: #4b4a4a;
-    display: block;
-    border: none;
-    background: none;
-    width:100%;
-    text-align: left;
-    cursor: pointer;
-    outline: none;
-    padding: 10px 15px;
+
+.menu-lateral ul li a {
+  font-size: 20px;
+  color: #4b4a4a;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+  padding: 10px 15px;
 }
 
-.menu-lateral ul li a:hover{
-    background-color: #8f8e8e;
-    color: #000;
-    font-weight: 650;
+.menu-lateral ul li a:hover {
+  background-color: #8f8e8e6b;
+  color: #000;
+  font-weight: 650;
 }
 
-.menu-lateral a, .dropdown-btn {
-    text-decoration: none;
-    font-size: 20px;
-    color: #4b4a4a;
-    display: block;
-    border: none;
-    background: none;
-    width:100%;
-    text-align: left;
-    cursor: pointer;
-    outline: none;
-    padding: 10px 15px;
-  }
-
-  .dropdown-container {
-    background-color: #f1f1f1;
-    padding-left: 8px;
-  }
-
-  .menu-lateral a:hover, .dropdown-btn:hover {
-    background-color: #8f8e8e6b;
-    color: #000;
-    font-weight: 650;   
-  }
-
-
-  .espacamento{
-    margin-top: 120px;
+.menu-lateral a,
+.dropdown-btn {
+  text-decoration: none;
+  font-size: 20px;
+  color: #4b4a4a;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+  padding: 10px 15px;
 }
 
- .footer-menu a{
-    font-size: 15px;
-    font-weight: 300;
+.dropdown-container {
+  background-color: #ffffff;
+  padding-left: 8px;
 }
 
- */
+.menu-lateral a:hover,
+.dropdown-btn:hover {
+  background-color: #8f8e8e6b;
+  color: #000;
+  font-weight: 650;
+}
+
+
+.espacamento {
+  padding-left: 50px;
+  margin-top: 120px;
+}
+
+.footer-menu a {
+  font-size: 15px;
+  font-weight: 300;
+}
+
 
 /* FIM MENU LATERAL - DESKTOP */
+
+/* NAV JEANS */
+.navbar {
+display: flex;
+justify-content: space-between;
+padding: 5px;
+}
+
+.navbar h4 {
+  margin: 0;
+  font-size: 20px;
+  font-weight: 1;
+}
+
+.navbar .icons {
+  display: flex;
+}
+
+.navbar .icons i {
+  margin-left: 10px;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+/* FIM NAV JEANS */
+
+
+/* IMG PRINCIPAL */
+.hero-image {
+  background-image: url("https://www.w3schools.com/w3images/jeans.jpg");
+  height: 80%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+
+.hero-text {
+  position: absolute;
+  top: 50px;
+  left: 50px; 
+  color: rgb(255, 255, 255);
+  font-size: 30px;
+  margin-top: 20px; 
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.button-shop {
+  background-color: rgb(0, 0, 0);
+  color: white;
+  padding: 12px 30px; 
+  font-size: 20px;
+  border: none; 
+  cursor: pointer; 
+  margin-top: 20px;
   
-.jeans {
-    background-color: #333;
-    overflow: hidden;
-    padding: 20px 10px;
-    height: 100%;
-    height: 100%;
-    width: 15px;
-    float: right;
-  }
+}
+
+.button-shop:hover {
+  background-color: #8f8e8e;
+}
+
+
+/* FIM IMG PRINCIPAL */
+
+.product-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px; 
+  gap: 30px;
+}
+
+.product {
+  width: 250px;
+  position: relative;
+  margin-bottom: 20px; 
+}
+
+.product img {
+  width: 100%;
+  height: 100%; 
+}
+
+.product-info {
+  color: #000;
+}
+
+.product-info h4 {
+ padding-bottom: 5px;
+}
+
+
+.product:hover .product-info {
+  display: block;
+}
+
+.product-name {
+  font-weight: bold;
+}
+
+.product-price {
+  font-size: 14px;
+}
+
+.new-tag {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: red;
+  color: white;
+  padding: 3px;
+  font-size: 12px;
+  display: none;
+}
+
+.product:hover .new-tag {
+  display: block;
+}
+
+.buy-button {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.product:hover .buy-button {
+  display: block;
+}
+
+
+form {
+  border: 4px solid #020202;
+  padding-top: 50px;
+  margin-top: 40px;
+  background-color: #000;
+  padding-left: 20px; /* Adicionando espaçamento à esquerda */
+  padding-right: 20px; /* Adicionando espaçamento à direita */
+}
+
+.form h2,.form p{
+  color: #ffffff;
+  padding-bottom: 15px;
+}
+
+.form h2{
+  font-size: 35px;
+}
+
+
+input[type=text]{
+  width: calc(100% - 24px);
+  padding: 12px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: calc(10% - 24px);
+  padding: 10px;
+  margin: 8px 0;
   
-  .jeans .logo {
-    float: none;
-    font-size: 24px;
-    color: #000;
-    text-decoration: none;
-    font-weight: lighter;
-  }
-  
-  .header-right {
-    float: right;
-  }
-  
-  .header-right a {
-    color: #000;
-    text-decoration: none;
-    margin-left: 20px;
-  }
-  
+}
+
+input[type=submit] {
+  background-color: #ff0606;
+  color: white;
+  border: none;
+}
+
+input[type=submit]:hover {
+  background-color: #8f8e8e;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
