--- a/style.css
+++ b/style.css
@@ -132,6 +132,12 @@
 
 /* FIM MENU LATERAL - DESKTOP */
 
+
+
+
+
+
+
 /* NAV JEANS */
 .navbar {
 display: flex;
@@ -477,9 +483,194 @@ input[type="submit1"]:hover {
 
 
 
+/* Para telas menores que 768px */
+@media screen and (max-width: 1600px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .div1, .div2, .div3 {
+    width: 100%;
+    padding-left: 0;
+  }
+
+  .menu-lateral {
+    position: static;
+    width: 100%;
+    padding-left: 0;
+  }
+
+  .menu-lateral ul {
+    padding-left: 0;
+  }
+
+  .menu-lateral ul li a {
+    padding: 10px;
+  }
+
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar h4 {
+    margin-bottom: 10px;
+  }
+
+  .hero-image {
+    background-image: url("https://www.w3schools.com/w3images/jeans.jpg");
+    height: 30%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+
+  .hero-text {
+    top: 20px;
+    left: 20px;
+    font-size: 24px;
+  }
+
+  .button-shop {
+    font-size: 16px;
+    padding: 10px 20px;
+  }
+
+  .product-container {
+    justify-content: center;
+  }
+
+  .product {
+    width: 100%;
+    max-width: 250px;
+  }
+
+  .product-info {
+    text-align: center;
+  }
+
+  .product-info p {
+    margin-bottom: 10px;
+  }
 
 
+  form {
+    padding-top: 50px;
+    margin-top: 40px;
+    background-color: #000;
+    padding-left: 20px; 
+  }
+  
+  .form h2,.form p{
+    color: #ffffff;
+    padding-bottom: 15px;
+  }
+  
+  .form h2{
+    font-size: 30px;
+  }
 
+  input[type=submit] {
+    width: calc(20% - 24px);
+    padding: 10px;
+    margin: 8px 0;
+    
+  }
+ 
+  
+
+/* Para telas menores que 1000px */
+@media screen and (max-width: 1000px) {
+  .menu-lateral {
+    padding-left: 0;
+  }
+
+  .navbar h4 {
+    font-size: 18px;
+  }
+
+  .hero-text {
+    font-size: 20px;
+  }
+
+  .hero-image {
+    background-image: url("https://www.w3schools.com/w3images/jeans.jpg");
+    height: 20%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+
+
+  .button-shop {
+    font-size: 14px;
+    padding: 8px 16px;
+  }
+
+  .product-info h4 {
+    font-size: 16px;
+  }
+
+  .product-info p {
+    font-size: 12px;
+  }
+
+  form {
+    padding-left: 0;
+  }
+
+  input[type=text], input[type=submit] {
+    width: 100%;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 560px){
+  .hero-image {
+    background-image: url("https://www.w3schools.com/w3images/jeans.jpg");
+    height: 8%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+
+  form {
+    padding-left: 20px; 
+  }
+  
+  .form h2,.form p{
+    color: #ffffff;
+    padding-bottom: 8px;
+  }
+  
+  .form h2{
+    font-size: 28px;
+  }
+  
+  
+  input[type=text]{
+    width: calc(100% - 24px);
+    padding: 12px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: calc(50% - 24px);
+    padding: 10px;
+    margin: 8px 0;
+    
+  }
+  
+  
+
+}
 
 
 
