--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 
 
 .menu-lateral {
-
+  z-index: 1;
   list-style-type: none;
   text-decoration: none;
   height: 100%;
@@ -133,10 +133,9 @@
 /* FIM MENU LATERAL - DESKTOP */
 
 
-
-
-
-
+.logo-mobile {
+  display: none; /* Esconde a logo por padrão */
+}
 
 /* NAV JEANS */
 .navbar {
@@ -483,7 +482,7 @@ input[type="submit1"]:hover {
 
 
 
-/* Para telas menores que 768px */
+
 @media screen and (max-width: 1600px) {
   .container {
     display: flex;
@@ -495,28 +494,115 @@ input[type="submit1"]:hover {
     padding-left: 0;
   }
 
-  .menu-lateral {
-    position: static;
-    width: 100%;
-    padding-left: 0;
-  }
+  /* BOTÃO MOBILE */
 
-  .menu-lateral ul {
-    padding-left: 0;
-  }
+#button {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px; 
+  align-items: center;
+  border: 0;
+  background: transparent;
+  row-gap: 4px;
+}
 
-  .menu-lateral ul li a {
-    padding: 10px;
-  }
+button:hover{
+  cursor: pointer;
+}
 
-  .navbar {
-    flex-direction: column;
-    align-items: center;
-  }
+button span{
+  margin-right: 25px;
+  width: 30px;
+  height: 2px;
+  background: #ffffff;
+  border-radius: 10px;
+  transition: all 0.4s;
+}
 
+button.active span:nth-child(2) {
+  opacity: 0;
+  width: 2px;
+}
+
+button.active span:nth-child(1) {
+  transform: rotate(-45deg) translate(-4px, 4px);
+}
+
+button.active span:nth-child(3) {
+  transform: rotate(45deg) translate(-5px, -4px);
+}
+
+/* FIM BOTÃO MOBILE */
+
+/* AJUSTES MENU MOBILE */
+.menu-lateral {
+  width: 250px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: -250px; 
+  transition:  0.3s ease; 
+  display: none; 
+}
+
+.menu-lateral.menu-open {
+  left: 0; 
+  display: block; 
+}
+
+
+/* AJUSTES MENU MOBILE */
+
+
+.mobile-nav {
+  background-color: #000; 
+  padding: 15px; 
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  z-index: 9999; 
+  display: flex; 
+  align-items: center; 
+}
+
+.logo-mobile {
+  display: block;
+  margin-left: 15px; 
+  color: #fff; 
+  font-size: 22px; 
+  font-weight: 1; 
+}
+
+#button {
+  margin-left: auto; 
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 25px;
+  margin-top: 35px;
+  }
+  
   .navbar h4 {
-    margin-bottom: 10px;
+    margin: 0;
+    font-size: 20px;
+    font-weight: 1;
   }
+  
+  .navbar .icons {
+    display: flex;
+    justify-content: center;
+    align-items: ce;
+  }
+  
+  .navbar .icons i {
+    margin-left: 10px;
+    font-size: 24px;
+    font-weight: 700;
+  }
+ 
 
   .hero-image {
     background-image: url("https://www.w3schools.com/w3images/jeans.jpg");
@@ -579,7 +665,7 @@ input[type="submit1"]:hover {
     
   }
  
-  
+}
 
 /* Para telas menores que 1000px */
 @media screen and (max-width: 1000px) {
